Adapted to QuPath 0.5